# rust-sdk

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  claude.yml
src/: bot_state.rs  lib.rs  monitor.rs  paper.rs  reader.rs  reporter.rs  run_cli.rs  runner.rs
src/exchange/: errors.rs  fill.rs  market_adapter.rs  mod.rs  order_tracker.rs  provider.rs  test_exchange.rs
src/logging/: janitor.rs  mod.rs
src/strategy/: batch.rs  batch_exchange.rs  mod.rs
src/types/: config.rs  enums.rs  events.rs  market_data.rs  mod.rs  orders.rs  pair_info.rs  params.rs  profit.rs  trade.rs  volume.rs
