[package]
name = "tradectl-sdk"
version = "0.1.9"
edition = "2021"
description = "Crypto trading strategy SDK — types, traits, exchange abstractions"

[features]
default = []
monitor = ["tokio-tungstenite", "futures-util", "tokio/net", "tokio/rt", "tokio/macros"]
runner = ["clap"]

[dependencies]
async-trait = "0.1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "sync"] }
log = "0.4"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"], optional = true }
futures-util = { version = "0.3", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
tracing-log = "0.2"
flate2 = "1"
once_cell = "1"
dirs = "6"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

