[package]
name = "tradectl-sdk"
version = "0.1.15"
edition = "2021"
description = "Crypto trading strategy SDK — types, traits, exchange abstractions"

[features]
default = []
# Channel-only now — the broadcaster needs just tokio's broadcast (sync). The
# WS serving moved to tradectl-bot-api's `/v1/stream`, so no tungstenite here.
monitor = ["tokio/sync"]
runner = ["clap"]

[dependencies]
async-trait = "0.1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "sync"] }
log = "0.4"
clap = { version = "4", features = ["derive"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
tracing-log = "0.2"
flate2 = "1"
once_cell = "1"
dirs = "6"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

